--- a/public/de/wirueberuns/index.html
+++ b/public/de/wirueberuns/index.html
@@ -85,7 +85,7 @@
       </div>
       
       <div class="list-container" onclick="location.href='\/de\/wirueberuns\/veranstaltungen\/';">
-        <img src="/img/wirUeberUns/Veranstaltungen/VeranstaltungenTitle.jpg" alt="List Picture" class="list-picture">
+        <img src="/img/wirUeberUns/Veranstaltungen/VeranstaltungenTitle.png" alt="List Picture" class="list-picture">
         <div class="list-textbox">
           <div class="list-shifted">
             <div class="list-title">
