--- a/public/de/finanzen/index.html
+++ b/public/de/finanzen/index.html
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="list-date">
-            Mittwoch, März 5, 2025
+            Donnerstag, Juni 5, 2025
           </div>
         </div>
       </div>
