--- a/public/de/finanzen/aktuellefinanzuebersicht/index.html
+++ b/public/de/finanzen/aktuellefinanzuebersicht/index.html
@@ -71,7 +71,7 @@
           Author: WvS
         </div>
         <div class="single-date">
-          Mittwoch, März 5, 2025
+          Donnerstag, Juni 5, 2025
         </div>
       </div>
       <div class="single-content">
@@ -92,19 +92,19 @@ Die nachfolgenden Aufstellungen sind Teil unseres Versprechens auf Transparenz u
   <tbody> 
       <tr>
         <td>Einnahmen seit Vereinsgründung</td>
-        <td>362.346,61 €</td>
+        <td>365.553,61 €</td>
       </tr> 
       <tr>
         <td>Ausgaben seit Vereinsgründung</td>
-        <td>318.516,18 €</td>
+        <td>331.011,42 €</td>
       </tr> 
       <tr>
         <td>Aktueller Kontostand</td>
-        <td>43.830,43 €</td>
+        <td>34.542,19 €</td>
       </tr> 
       <tr>
         <td>Verfügbare Summe</td>
-        <td>5.770,43 €</td>
+        <td>1.482,19 €</td>
       </tr>
   </tbody>
 </table>
@@ -139,7 +139,7 @@ Die nachfolgenden Aufstellungen sind Teil unseres Versprechens auf Transparenz u
       </tr> 
       <tr>
         <td>geplanter Campus - Haus der Sonne</td>
-        <td>5.000,00 €</td>
+        <td>0,00 €</td>
       </tr>
   </tbody>
 </table>
@@ -158,7 +158,7 @@ Die nachfolgenden Aufstellungen sind Teil unseres Versprechens auf Transparenz u
   <tbody> 
       <tr>
         <td>Verfügbare Summe</td>
-        <td>5.770,43 €</td>
+        <td>1.482,19 €</td>
       </tr>
   </tbody>
 </table>
@@ -199,8 +199,8 @@ Auch das Team in Kamerun arbeitet ehrenamtlich.</li>
 <label for="expand-image4">
   <img class="img-centered" src="/img/Finanzen/AktuelleFinanzuebersicht/SpendenHistorisch.png#imagemd" alt="Spenden seit Vereinsgründung" />
 </label>
-</div>
-<p class="img-caption">Gesamtertrag seit Vereinsgründung</p>
+<div class="img-caption">Gesamtertrag seit Vereinsgründung</div>
+<!-- <p class="img-caption">Gesamtertrag seit Vereinsgründung</p> -->
 <h2 id="ausgaben">Ausgaben</h2>
 <p>Alle Tätigkeiten werden ausschließlich von Ehrenamtlichen ausgeführt, wodurch die Vereinskosten minimal bleiben. Die beigefügte Grafik zeigt, wie viel Prozent der Ausgaben direkt den Kindern und Projekten zugutekommen und wie gering der Kostenanteil ist.</p>
 <input type="checkbox" id="expand-image5" />
@@ -221,6 +221,41 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
     </tr>
   </thead>
   <tbody> 
+      <tr>
+        <td>31.05.2025</td>
+        <td>Kontoführungsgebühren</td>
+        <td>-5,00 €</td>
+      </tr> 
+      <tr>
+        <td>26.05.2025</td>
+        <td>Überweisungskosten</td>
+        <td>-30,00 €</td>
+      </tr> 
+      <tr>
+        <td>13.05.2025</td>
+        <td>1&amp;1 Internetkosten</td>
+        <td>-21,62 €</td>
+      </tr> 
+      <tr>
+        <td>30.04.2025</td>
+        <td>Kontoführungsgebühren</td>
+        <td>-5,00 €</td>
+      </tr> 
+      <tr>
+        <td>28.04.2025</td>
+        <td>Überweisungskosten</td>
+        <td>-30,00 €</td>
+      </tr> 
+      <tr>
+        <td>15.04.2025</td>
+        <td>Girocard</td>
+        <td>-12,00 €</td>
+      </tr> 
+      <tr>
+        <td>14.04.2025</td>
+        <td>1&amp;1 Internetkosten</td>
+        <td>-21,62 €</td>
+      </tr> 
       <tr>
         <td>31.03.2025</td>
         <td>Kontoführungsgebühren</td>
@@ -389,52 +424,7 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
       <tr>
         <td>12.06.2024</td>
         <td>1&amp;1 Internetkosten</td>
-        <td>-15,14 €</td>
-      </tr> 
-      <tr>
-        <td>31.05.2024</td>
-        <td>Kontoführungsgebühren</td>
-        <td>-6,20 €</td>
-      </tr> 
-      <tr>
-        <td>31.05.2024</td>
-        <td>Konto Auflösung</td>
-        <td>-9,00 €</td>
-      </tr> 
-      <tr>
-        <td>21.05.2024</td>
-        <td>Überweisungskosten</td>
-        <td>-30,00 €</td>
-      </tr> 
-      <tr>
-        <td>30.04.2024</td>
-        <td>Kontoführungsgebühren</td>
-        <td>-5,80 €</td>
-      </tr> 
-      <tr>
-        <td>29.04.2024</td>
-        <td>Überweisungskosten</td>
-        <td>-30,00 €</td>
-      </tr> 
-      <tr>
-        <td>12.04.2024</td>
-        <td>Girocard</td>
-        <td>-12,00 €</td>
-      </tr> 
-      <tr>
-        <td>12.04.2024</td>
-        <td>1&amp;1 Internetkosten</td>
-        <td>-15,14 €</td>
-      </tr> 
-      <tr>
-        <td>08.04.2024</td>
-        <td>Überweisungskosten</td>
-        <td>-60,00 €</td>
-      </tr> 
-      <tr>
-        <td>08.04.2024</td>
-        <td>Überweisungskosten</td>
-        <td>-3,90 €</td>
+        <td>-15,14 €</td>
       </tr>
   </tbody>
 </table>
@@ -451,6 +441,51 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
     </tr>
   </thead>
   <tbody> 
+      <tr>
+        <td>26.05.2025</td>
+        <td>6. Brunnen: 2. Abschlagszahlung</td>
+        <td>-4.000,00 €</td>
+      </tr> 
+      <tr>
+        <td>26.05.2025</td>
+        <td>Ausbildung Cheila, Dadiane, Blondelle</td>
+        <td>-150,00 €</td>
+      </tr> 
+      <tr>
+        <td>26.05.2025</td>
+        <td>med. Versorgung Carles Christ &#43; Cabrel Désiré</td>
+        <td>-30,00 €</td>
+      </tr> 
+      <tr>
+        <td>26.05.2025</td>
+        <td>1 warme Mahlzeit Juni 2025</td>
+        <td>-2.005,00 €</td>
+      </tr> 
+      <tr>
+        <td>28.04.2025</td>
+        <td>6. Brunnen: 1. Abschlagszahlung</td>
+        <td>-3.500,00 €</td>
+      </tr> 
+      <tr>
+        <td>28.04.2025</td>
+        <td>Schulgarten École Catholique saint-pierre de Bamougoung</td>
+        <td>-500,00 €</td>
+      </tr> 
+      <tr>
+        <td>28.04.2025</td>
+        <td>Ausbildung Cheila, Dadiane, Blondelle</td>
+        <td>-150,00 €</td>
+      </tr> 
+      <tr>
+        <td>28.04.2025</td>
+        <td>med. Versorgung Carles Christ &#43; Cabrel Désiré</td>
+        <td>-30,00 €</td>
+      </tr> 
+      <tr>
+        <td>28.04.2025</td>
+        <td>1 warme Mahlzeit Mai 2025</td>
+        <td>-2.005,00 €</td>
+      </tr> 
       <tr>
         <td>31.03.2025</td>
         <td>Brunnenwartung</td>
@@ -704,92 +739,7 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
       <tr>
         <td>20.06.2024</td>
         <td>MUPECI P/C DIMENSION BTP SARL (Architekt)</td>
-        <td>-3.846,00 €</td>
-      </tr> 
-      <tr>
-        <td>21.05.2024</td>
-        <td>5. Brunnen: Anzahlung</td>
-        <td>-5.000,00 €</td>
-      </tr> 
-      <tr>
-        <td>29.04.2024</td>
-        <td>med. Versorgung Rodanice</td>
-        <td>-35,00 €</td>
-      </tr> 
-      <tr>
-        <td>29.04.2024</td>
-        <td>med. Versorgung Bertin</td>
-        <td>-35,00 €</td>
-      </tr> 
-      <tr>
-        <td>29.04.2024</td>
-        <td>1 warme Mahlzeit Juni 2024 (2 Monate zusammen, um Überweisungskosten zu sparen)</td>
-        <td>-2.005,00 €</td>
-      </tr> 
-      <tr>
-        <td>29.04.2024</td>
-        <td>med. Versorgung Samuel</td>
-        <td>-560,00 €</td>
-      </tr> 
-      <tr>
-        <td>29.04.2024</td>
-        <td>med. Versorgung Serena</td>
-        <td>-275,00 €</td>
-      </tr> 
-      <tr>
-        <td>29.04.2024</td>
-        <td>med. Versorgung Rodanice</td>
-        <td>-35,00 €</td>
-      </tr> 
-      <tr>
-        <td>29.04.2024</td>
-        <td>med. Versorgung Bertin</td>
-        <td>-35,00 €</td>
-      </tr> 
-      <tr>
-        <td>29.04.2024</td>
-        <td>1 warme Mahlzeit Mai 2024</td>
-        <td>-2.005,00 €</td>
-      </tr> 
-      <tr>
-        <td>17.04.2024</td>
-        <td>Zurück von Western Union</td>
-        <td>11.579,64 €</td>
-      </tr> 
-      <tr>
-        <td>08.04.2024</td>
-        <td>Überweisungen von Western Union, die nicht nach Kamerun überwiesen wurden. Wird zurücküberwiesen…</td>
-        <td>-11.593,70 €</td>
-      </tr> 
-      <tr>
-        <td>08.04.2024</td>
-        <td>Brunnen: Wartung</td>
-        <td>-152,00 €</td>
-      </tr> 
-      <tr>
-        <td>08.04.2024</td>
-        <td>Umweltprojekt</td>
-        <td>-8.000,00 €</td>
-      </tr> 
-      <tr>
-        <td>08.04.2024</td>
-        <td>Zahnhygiene</td>
-        <td>-150,00 €</td>
-      </tr> 
-      <tr>
-        <td>08.04.2024</td>
-        <td>med. Versorgung Rodanice</td>
-        <td>-35,00 €</td>
-      </tr> 
-      <tr>
-        <td>08.04.2024</td>
-        <td>med. Versorgung Bertin</td>
-        <td>-35,00 €</td>
-      </tr> 
-      <tr>
-        <td>08.04.2024</td>
-        <td>1 warme Mahlzeit April 2024</td>
-        <td>-2.005,00 €</td>
+        <td>-3.846,00 €</td>
       </tr>
   </tbody>
 </table>
@@ -818,6 +768,7 @@ Die in rot gezeigten Unkosten setzen sich hauptsächlich aus laufenden Kosten wi
     });
   });
 </script>
+
       </div>
     </div>
   </div>
