--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <title>http://localhost:1313/de/</title>
-    <link rel="canonical" href="http://localhost:1313/de/">
+    <title>http://hds.milchtanker.de/de/</title>
+    <link rel="canonical" href="http://hds.milchtanker.de/de/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://localhost:1313/de/">
+    <meta http-equiv="refresh" content="0; url=http://hds.milchtanker.de/de/">
   </head>
 </html>
