--- a/public/de/helfen/patenschaftverwalten/index.html
+++ b/public/de/helfen/patenschaftverwalten/index.html
@@ -275,7 +275,7 @@
         const plz = document.getElementById("js-input-adress-aenderungen-plz").value;
         const wohnort = document.getElementById("js-input-adress-aenderungen-wohnort").value;
         const telnummer = document.getElementById("js-input-adress-aenderungen-telnummer").value;
-        fetch("http://cloud.schwartzies.de:65432/patenschaftAdressAenderung/", {
+        fetch("https://hds.milchtanker.de/api/patenschaftAdressAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -302,7 +302,7 @@
         const vorname = document.getElementById("js-input-email-aenderung-vorname").value;
         const nachname = document.getElementById("js-input-email-aenderung-nachname").value;
         const email = document.getElementById("js-input-email-aenderung-email").value;
-        fetch("http://cloud.schwartzies.de:65432/patenschaftEmailAenderung/", {
+        fetch("https://hds.milchtanker.de/api/patenschaftEmailAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -328,7 +328,7 @@
         const kontoinhaber = document.getElementById("js-input-konto-aenderung-kontoinhaber").value;
         const iban = document.getElementById("js-input-konto-aenderung-iban").value;
         const bic = document.getElementById("js-input-konto-aenderung-bic").value;
-        fetch("http://cloud.schwartzies.de:65432/patenschaftKontoAenderung/", {
+        fetch("https://hds.milchtanker.de/api/patenschaftKontoAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -359,7 +359,7 @@
         const kontoinhaber = document.getElementById("js-input-jahresbeitrag-aenderung-kontoinhaber").value;
         const iban = document.getElementById("js-input-jahresbeitrag-aenderung-iban").value;
         const bic = document.getElementById("js-input-jahresbeitrag-aenderung-bic").value;
-        fetch("http://cloud.schwartzies.de:65432/patenschaftJahresbeitragAenderung/", {
+        fetch("https://hds.milchtanker.de/api/patenschaftJahresbeitragAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -388,7 +388,7 @@
         const vorname = document.getElementById("js-input-zuwendungsbescheinigung-aenderung-vorname").value;
         const nachname = document.getElementById("js-input-zuwendungsbescheinigung-aenderung-nachname").value;
         const zuwendungsbescheinigung = document.getElementById("js-zuwendungsbescheinigung-aenderung").value;
-        fetch("http://cloud.schwartzies.de:65432/patenschaftZuwendungsbescheinigungAenderung/", {
+        fetch("https://hds.milchtanker.de/api/patenschaftZuwendungsbescheinigungAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -411,7 +411,7 @@
     btnPatenschaftKuendigen.addEventListener('click', () => {
         const vorname = document.getElementById("js-input-patenschaft-kuendigen-vorname").value;
         const nachname = document.getElementById("js-input-patenschaft-kuendigen-nachname").value;
-        fetch("http://cloud.schwartzies.de:65432/patenschaftKuendigen/", {
+        fetch("https://hds.milchtanker.de/api/patenschaftKuendigen/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
