--- a/public/de/helfen/patewerden/index.html
+++ b/public/de/helfen/patewerden/index.html
@@ -204,7 +204,7 @@ Die Datenschutzerklärung habe ich gelesen und erkenne Sie ausdrücklich an.
         const kontoinhaber = document.getElementById("js-input-kontoinhaber").value;
         const iban = document.getElementById("js-input-iban").value;
         const bic = document.getElementById("js-input-bic").value;
-        fetch("http://cloud.schwartzies.de:65432/patenschaftsantrag/", {
+        fetch("https://hds.milchtanker.de/api/patenschaftsantrag/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
