--- a/public/de/helfen/spenden/index.html
+++ b/public/de/helfen/spenden/index.html
@@ -208,7 +208,7 @@ Zu Beginn eines jeden Jahres werden für Spenden im Vorjahr über 100 € Spende
         const iban = document.getElementById("js-input-iban").value;
         const bic = document.getElementById("js-input-bic").value;
 
-        fetch("http://cloud.schwartzies.de:65432/spenden/", {
+        fetch("https://hds.milchtanker.de/api/spenden/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
