--- a/public/de/gesamtschulekempen/index.html
+++ b/public/de/gesamtschulekempen/index.html
@@ -67,7 +67,7 @@
 
       
       
-      <div class="list-container" onclick="location.href='\/de\/gesamtschulekempen\/sozialertag\/';">
+      <div class="list-container" onclick="location.href='\/de\/GesamtSchuleKempen\/SozialerTag\/';">
         <img src="/img/wirUeberUns/Kooperationen/GesamtSchKempen/SozialerTag/SozialerTagTitle.jpg" alt="List Picture" class="list-picture">
         <div class="list-textbox">
           <div class="list-shifted">
