--- a/public/en/bildung/index.html
+++ b/public/en/bildung/index.html
@@ -67,7 +67,7 @@
 
       
       
-      <div class="list-container" onclick="location.href='\/en\/bildung\/aufklaerung\/';">
+      <div class="list-container" onclick="location.href='\/en\/Bildung\/aufklaerung\/';">
         <img src="/img/Bildung/Aufkl%c3%a4rung/Aufkl%c3%a4rungTitle.jpeg" alt="List Picture" class="list-picture">
         <div class="list-textbox">
           <div class="list-shifted">
