--- a/public/fr/versorgung/index.html
+++ b/public/fr/versorgung/index.html
@@ -67,7 +67,7 @@
 
       
       
-      <div class="list-container" onclick="location.href='\/fr\/versorgung\/einewarmemahlzeit\/';">
+      <div class="list-container" onclick="location.href='\/fr\/Versorgung\/EineWarmeMahlzeit\/';">
         <img src="/img/Versorgung/EineWarmeMahlzeit/EineWarmeMahlzeitTitle.jpg" alt="List Picture" class="list-picture">
         <div class="list-textbox">
           <div class="list-shifted">
