--- a/public/fr/helfen/index.html
+++ b/public/fr/helfen/index.html
@@ -67,7 +67,7 @@
 
       
       
-      <div class="list-container" onclick="location.href='\/fr\/helfen\/patewerden\/';">
+      <div class="list-container" onclick="location.href='\/fr\/Helfen\/pateWerden\/';">
         <img src="/img/Helfen/PateWerden/PateWerdenTitle.png" alt="List Picture" class="list-picture">
         <div class="list-textbox">
           <div class="list-shifted">
