--- a/public/de/Helfen/gezieltSpenden/index.html
+++ b/public/de/Helfen/gezieltSpenden/index.html
@@ -60,7 +60,7 @@
       <img class="img-logo-klein" src="/img/logo-klein.png" alt="Haus der Sonne">
     </a>
     <div class="pagepicture">
-      <img src="/img/Helfen/gezieltSpenden/GezieltSpendenTitle.png" alt="Single Picture" class="img-pagepicture">
+      <img src="/img/Helfen/GezieltSpenden/GezieltSpendenTitle.png" alt="Single Picture" class="img-pagepicture">
     </div>
     <div class="single-contents">
       <div class="pagetitle">
@@ -107,7 +107,7 @@ Zu Beginn eines jeden Jahres werden für Spenden im Vorjahr über 100 € Spende
         <br>
         <input type="checkbox" id="expand-image1" />
         <label for="expand-image1">
-        <img class="img-centered-half" src="/img/Spendenkonto.png" alt="Spendenkonto" />
+        <img class="img-centered-half" src="/img/spendenkonto.png" alt="Spendenkonto" />
         </label>
         <div class="img-caption-half">Spendenkonto</div>
         <br>    
