--- a/public/de/Helfen/spenden/index.html
+++ b/public/de/Helfen/spenden/index.html
@@ -93,7 +93,7 @@ Zu Beginn eines jeden Jahres werden für Spenden im Vorjahr über 100 € Spende
         <br>
         <input type="checkbox" id="expand-image1" />
         <label for="expand-image1">
-        <img class="img-centered-half" src="/img/Spendenkonto.png" alt="Spendenkonto" />
+        <img class="img-centered-half" src="/img/spendenkonto.png" alt="Spendenkonto" />
         </label>
         <div class="img-caption-half">Spendenkonto</div>
         <br>    
