--- a/public/de/WirUeberUns/presse/index.html
+++ b/public/de/WirUeberUns/presse/index.html
@@ -71,7 +71,7 @@
           Author: WvS
         </div>
         <div class="single-date">
-          Donnerstag, Juni 5, 2025
+          Freitag, Juni 6, 2025
         </div>
       </div>
       <div class="single-content">
