--- a/public/de/wirueberuns/index.html
+++ b/public/de/wirueberuns/index.html
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="list-date">
-            Donnerstag, Juni 5, 2025
+            Freitag, Juni 6, 2025
           </div>
         </div>
       </div>
