--- a/public/fr/wirueberuns/index.html
+++ b/public/fr/wirueberuns/index.html
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="list-date">
-            jeudi, juin 5, 2025
+            vendredi, juin 6, 2025
           </div>
         </div>
       </div>
