--- a/public/fr/wirueberuns/presse/index.html
+++ b/public/fr/wirueberuns/presse/index.html
@@ -71,7 +71,7 @@
           Author: WvS
         </div>
         <div class="single-date">
-          jeudi, juin 5, 2025
+          vendredi, juin 6, 2025
         </div>
       </div>
       <div class="single-content">
