--- a/public/de/versorgung/einewarmemahlzeit/index.html
+++ b/public/de/versorgung/einewarmemahlzeit/index.html
@@ -71,7 +71,7 @@
           Author: WvS
         </div>
         <div class="single-date">
-          Donnerstag, März 27, 2025
+          Dienstag, Mai 27, 2025
         </div>
       </div>
       <div class="single-content">
