--- a/public/de/Versorgung/eineWarmeMahlzeit/index.html
+++ b/public/de/Versorgung/eineWarmeMahlzeit/index.html
@@ -75,7 +75,10 @@
         </div>
       </div>
       <div class="single-content">
-        <h2 id="eine-warme-mahlzeit">Eine warme Mahlzeit</h2>
+        <div class="div-gezielt-spenden">
+    <button class="button-gezielt-spenden" id="button-gezielt-spenden">GEZIELT SPENDEN</button>
+</div>
+<h2 id="eine-warme-mahlzeit">Eine warme Mahlzeit</h2>
 <input type="checkbox" id="expand-image1" />
 <label for="expand-image1">
   <img class="img-centered-noborder" src="/img/main-warmeMahlzeit.png" alt="EineWarmeMahlzeit" />
@@ -196,7 +199,9 @@ Das Projekt finanziert sich über die Paten, die den nötigen Beitrag erbringen,
 </details>
 <br>
 <br>
-Diese Kinder haben noch keinen Paten gefunden. Wenn es Ihnen möglich ist, helfen Sie bitte und schließen Sie eine Patenschaft ab. Hier geht es zum Antrag: 
+Diese Kinder haben noch keinen Paten gefunden. Wenn es Ihnen möglich ist, helfen Sie bitte und schließen Sie eine Patenschaft ab.  
+<br>
+Hier geht es zum Antrag: 
 <a href="../../Helfen/pateWerden">Pate werden</a> 
 <div id="kinder-container"></div> 
 <br>
@@ -223,6 +228,15 @@ Diese Kinder haben noch keinen Paten gefunden. Wenn es Ihnen möglich ist, helfe
         const showButton = false;
         const linkedPage = false;
         containerVersorgt.innerHTML = generateKinderHTML(showkinderOhnePaten, showButton, linkedPage);
+    });
+</script>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        let baseUrl = document.querySelector("meta[name='baseurl']").content;
+        let siteLanguage = document.querySelector("meta[name='siteLanguage']").content;
+        document.getElementById("button-gezielt-spenden").onclick = () => {
+            window.location.href = `${baseUrl}/${siteLanguage}/Helfen/gezieltSpenden`;
+        };
     });
 </script>
       </div>
