--- a/public/fr/index.html
+++ b/public/fr/index.html
@@ -142,7 +142,7 @@
                                     <a href="Versorgung/brunnenbau_6">Sauberes Wasser</a>
                                 </li>
                                 <li>
-                                    <a href="#" style="color: lightgray;">Medizinische Versorgung</a>
+                                    <a href="Versorgung/medizinischeVersorgung">Medizinische Versorgung</a>
                                 </li>
                             </ul>
                         </div>
