--- a/public/de/Versorgung/medizinischeVersorgung/index.html
+++ b/public/de/Versorgung/medizinischeVersorgung/index.html
@@ -81,6 +81,9 @@
 <h2 id="vorwort">Vorwort</h2>
 <p>Im Juli 2018 konnten wir das Projekt &ldquo;Eine warme Mahlzeit&rdquo; für 25 Kinder und Jugendliche starten. Inzwischen helfen uns so viele Menschen, Unternehmen und Schulen durch die Übernahme von Patenschaften, dass wir inzwischen 50 Kinder täglich ernähren können.<br>
 Zunehmend kommen in Kempen Hilferufe nach medizinischer Versorgung an. Ärzte und Medikamente gibt es in Mbouda. Wie immer sind es aber die finanziellen Mittel, die den Menschen auf dem afrikanischen Kontinent fehlen.</p>
+<p>Dieser Spendenaufruf richtet sich an Ärztinnen und Ärzte, Apothekerinnen und Apotheker, Entscheidungsträger in der Pharmaindustrie sowie an alle, die uns helfen möchten, die medizinische Betreuung auszubauen und nachhaltig zu sichern.<br>
+Unser Ziel: Alle Kinder unseres Projekts sollen einmal im Jahr eine ärztliche und zahnärztliche Untersuchung erhalten. So lassen sich Krankheiten frühzeitig erkennen und behandeln – bevor sie unnötige Schmerzen und Leid verursachen.<br>
+Um dies zu ermöglichen, sind wir auf regelmäßige finanzielle Unterstützung angewiesen. Jeder Beitrag hilft, diesen wichtigen Schutz zu gewährleisten.</p>
 <h2 id="medizinische-behandlungen">Medizinische Behandlungen</h2>
 <p>In den folgenden Abschnitten stellen wir einige medizinische Fälle unserer Schützlinge vor. Dank Ihrer gezielten Spenden konnten wir bisher jedem Kind die notwendige Hilfe ermöglichen:<br>
 <br></p>
