--- a/public/de/index.html
+++ b/public/de/index.html
@@ -562,7 +562,7 @@
                         Reisetagebuch 2024
                       </div>
                       <div class="list-description">
-                        Hier finden Sie Christian&#39;s und Maik&#39;s Reisetagebuch von ihrer Reise nach Kamerun/Mbouda im April 2024.
+                        Hier finden Sie Christians und Maiks Reisetagebuch von ihrer Reise nach Kamerun/Mbouda im April 2024.
                       </div>
                     </div>
                     <div class="list-date">
@@ -585,7 +585,7 @@
                         Reisetagebuch 2023
                       </div>
                       <div class="list-description">
-                        Hier finden Sie Christian&#39;s Reisetagebuch von seiner Reise nach Kamerun/Mbouda im April 2023.
+                        Hier finden Sie Christians Reisetagebuch von seiner Reise nach Kamerun/Mbouda im April 2023.
                       </div>
                     </div>
                     <div class="list-date">
@@ -608,7 +608,7 @@
                         Reisetagebuch 2022
                       </div>
                       <div class="list-description">
-                        Hier finden Sie Christian&#39;s Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2022.
+                        Hier finden Sie Christians Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2022.
                       </div>
                     </div>
                     <div class="list-date">
@@ -631,7 +631,7 @@
                         Reisetagebuch 2019
                       </div>
                       <div class="list-description">
-                        Hier finden Sie Christian&#39;s Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2019.
+                        Hier finden Sie Christians Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2019.
                       </div>
                     </div>
                     <div class="list-date">
@@ -654,7 +654,7 @@
                         Reisetagebuch 2018
                       </div>
                       <div class="list-description">
-                        Hier finden Sie Christian&#39;s Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2018.
+                        Hier finden Sie Christians Reisetagebuch von seiner Reise nach Kamerun/Mbouda im März 2018.
                       </div>
                     </div>
                     <div class="list-date">
