--- a/public/de/helfen/mitgliedschaftverwalten/index.html
+++ b/public/de/helfen/mitgliedschaftverwalten/index.html
@@ -277,7 +277,7 @@ Durch Ihren Beitrag stärken Sie den Verein im Allgemeinen, aber Ihr Beitrag wir
         const plz = document.getElementById("js-input-adress-aenderungen-plz").value;
         const wohnort = document.getElementById("js-input-adress-aenderungen-wohnort").value;
         const telnummer = document.getElementById("js-input-adress-aenderungen-telnummer").value;
-        fetch("https://hds.milchtanker.de/api/mitgliedschaftAdressAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/mitgliedschaftAdressAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -304,7 +304,7 @@ Durch Ihren Beitrag stärken Sie den Verein im Allgemeinen, aber Ihr Beitrag wir
         const vorname = document.getElementById("js-input-email-aenderung-vorname").value;
         const nachname = document.getElementById("js-input-email-aenderung-nachname").value;
         const email = document.getElementById("js-input-email-aenderung-email").value;
-        fetch("https://hds.milchtanker.de/api/mitgliedschaftEmailAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/mitgliedschaftEmailAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -330,7 +330,7 @@ Durch Ihren Beitrag stärken Sie den Verein im Allgemeinen, aber Ihr Beitrag wir
         const kontoinhaber = document.getElementById("js-input-konto-aenderung-kontoinhaber").value;
         const iban = document.getElementById("js-input-konto-aenderung-iban").value;
         const bic = document.getElementById("js-input-konto-aenderung-bic").value;
-        fetch("https://hds.milchtanker.de/api/mitgliedschaftKontoAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/mitgliedschaftKontoAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -361,7 +361,7 @@ Durch Ihren Beitrag stärken Sie den Verein im Allgemeinen, aber Ihr Beitrag wir
         const kontoinhaber = document.getElementById("js-input-jahresbeitrag-aenderung-kontoinhaber").value;
         const iban = document.getElementById("js-input-jahresbeitrag-aenderung-iban").value;
         const bic = document.getElementById("js-input-jahresbeitrag-aenderung-bic").value;
-        fetch("https://hds.milchtanker.de/api/mitgliedschaftJahresbeitragAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/mitgliedschaftJahresbeitragAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -390,7 +390,7 @@ Durch Ihren Beitrag stärken Sie den Verein im Allgemeinen, aber Ihr Beitrag wir
         const vorname = document.getElementById("js-input-zuwendungsbescheinigung-aenderung-vorname").value;
         const nachname = document.getElementById("js-input-zuwendungsbescheinigung-aenderung-nachname").value;
         const zuwendungsbescheinigung = document.getElementById("js-zuwendungsbescheinigung-aenderung").value;
-        fetch("https://hds.milchtanker.de/api/mitgliedschaftZuwendungsbescheinigungAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/mitgliedschaftZuwendungsbescheinigungAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -413,7 +413,7 @@ Durch Ihren Beitrag stärken Sie den Verein im Allgemeinen, aber Ihr Beitrag wir
     btnMitgliedschaftKuendigen.addEventListener('click', () => {
         const vorname = document.getElementById("js-input-mitgliedschaft-kuendigen-vorname").value;
         const nachname = document.getElementById("js-input-mitgliedschaft-kuendigen-nachname").value;
-        fetch("https://hds.milchtanker.de/api/mitgliedschaftKuendigen/", {
+        fetch("https://hausdersonne-kempen.de/api/mitgliedschaftKuendigen/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -434,7 +434,7 @@ Durch Ihren Beitrag stärken Sie den Verein im Allgemeinen, aber Ihr Beitrag wir
     });
     closeMessageBtn.addEventListener('click', () => {
         messageBox.style.display = 'none';
-        window.location.href = 'https://hds.milchtanker.de';
+        window.location.href = 'https://hausdersonne-kempen.de';
     });
 </script>
       </div>
