--- a/public/de/helfen/patenschaftverwalten/index.html
+++ b/public/de/helfen/patenschaftverwalten/index.html
@@ -275,7 +275,7 @@
         const plz = document.getElementById("js-input-adress-aenderungen-plz").value;
         const wohnort = document.getElementById("js-input-adress-aenderungen-wohnort").value;
         const telnummer = document.getElementById("js-input-adress-aenderungen-telnummer").value;
-        fetch("https://hds.milchtanker.de/api/patenschaftAdressAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/patenschaftAdressAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -302,7 +302,7 @@
         const vorname = document.getElementById("js-input-email-aenderung-vorname").value;
         const nachname = document.getElementById("js-input-email-aenderung-nachname").value;
         const email = document.getElementById("js-input-email-aenderung-email").value;
-        fetch("https://hds.milchtanker.de/api/patenschaftEmailAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/patenschaftEmailAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -328,7 +328,7 @@
         const kontoinhaber = document.getElementById("js-input-konto-aenderung-kontoinhaber").value;
         const iban = document.getElementById("js-input-konto-aenderung-iban").value;
         const bic = document.getElementById("js-input-konto-aenderung-bic").value;
-        fetch("https://hds.milchtanker.de/api/patenschaftKontoAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/patenschaftKontoAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -359,7 +359,7 @@
         const kontoinhaber = document.getElementById("js-input-jahresbeitrag-aenderung-kontoinhaber").value;
         const iban = document.getElementById("js-input-jahresbeitrag-aenderung-iban").value;
         const bic = document.getElementById("js-input-jahresbeitrag-aenderung-bic").value;
-        fetch("https://hds.milchtanker.de/api/patenschaftJahresbeitragAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/patenschaftJahresbeitragAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -388,7 +388,7 @@
         const vorname = document.getElementById("js-input-zuwendungsbescheinigung-aenderung-vorname").value;
         const nachname = document.getElementById("js-input-zuwendungsbescheinigung-aenderung-nachname").value;
         const zuwendungsbescheinigung = document.getElementById("js-zuwendungsbescheinigung-aenderung").value;
-        fetch("https://hds.milchtanker.de/api/patenschaftZuwendungsbescheinigungAenderung/", {
+        fetch("https://hausdersonne-kempen.de/api/patenschaftZuwendungsbescheinigungAenderung/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -411,7 +411,7 @@
     btnPatenschaftKuendigen.addEventListener('click', () => {
         const vorname = document.getElementById("js-input-patenschaft-kuendigen-vorname").value;
         const nachname = document.getElementById("js-input-patenschaft-kuendigen-nachname").value;
-        fetch("https://hds.milchtanker.de/api/patenschaftKuendigen/", {
+        fetch("https://hausdersonne-kempen.de/api/patenschaftKuendigen/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -433,7 +433,7 @@
     closeMessageBtn.addEventListener('click', () => {
         console.log("test");
         messageBox.style.display = 'none';
-        window.location.href = 'https://hds.milchtanker.de';
+        window.location.href = 'https://hausdersonne-kempen.de';
     });
 </script>
 
