--- a/public/de/helfen/spenden/index.html
+++ b/public/de/helfen/spenden/index.html
@@ -208,7 +208,7 @@ Zu Beginn eines jeden Jahres werden für Spenden im Vorjahr über 100 € Spende
         const iban = document.getElementById("js-input-iban").value;
         const bic = document.getElementById("js-input-bic").value;
 
-        fetch("https://hds.milchtanker.de/api/spenden/", {
+        fetch("https://hausdersonne-kempen.de/api/spenden/", {
             method: "POST",
             headers: {
                 "Accept": "application/json",
@@ -245,7 +245,7 @@ Zu Beginn eines jeden Jahres werden für Spenden im Vorjahr über 100 € Spende
     });
     closeMessageBtn.addEventListener('click', () => {
         messageBox.style.display = 'none';
-        window.location.href = 'https://hds.milchtanker.de';
+        window.location.href = 'https://hausdersonne-kempen.de';
     });
     closeMessageFehlerBtn.addEventListener('click', () => {
         messageBoxFehler.style.display = 'none';
